--- a/__old__/less/app.less
+++ b/__old__/less/app.less
@@ -6,10 +6,11 @@
 /* imports */
 
 @import url(common.less);
-@import url(canvas.less);
+@import url(lw-canvas.less);
 
 
 /* styles */
+
 
 html, body {
     position: relative;
